tests with openshift registry

--- a/.devfile-v2.yaml
+++ b/.devfile-v2.yaml
@@ -47,7 +47,7 @@ commands:
       commandLine: >
         ([ ! -f ./IMG_REG ] && echo "File ./IMG_REG not found, please create one to specify the container registry (for example \"quay.io\")") ||
         ([ ! -f ./IMG_ORG ] && echo "File ./IMG_ORG not found, please create one to specify the container registry organization (for example \"eclipse\")") ||
-        (date +%s > ./IMG_TAG; ./build.sh --tag $(cat ./IMG_TAG) --registry $(cat ./IMG_REG) --organization $(cat ./IMG_ORG))
+        (date +%s > ./IMG_TAG; BUILDER=buildah ./build.sh --tag $(cat ./IMG_TAG) --registry $(cat ./IMG_REG) --organization $(cat ./IMG_ORG))
       component: devtools
       label: 3. build che-devfile-registry image
   - id: 4-publish-image
