--- a/devfiles/cpp/meta.yaml
+++ b/devfiles/cpp/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: C/C++
 description: Stack with C/C++ and Clang 8
-tags: ["Community", "C/C++", "clang", "g++", "gdb"]
+tags: ["Community", "C/C++", "Clang", "g++", "GDB"]
 icon: /images/cpp.svg
 links:
   v2: https://github.com/che-samples/cpp-hello-world/tree/devfilev2
