--- a/devfiles/nodejs-angular/meta.yaml
+++ b/devfiles/nodejs-angular/meta.yaml
@@ -1,7 +1,7 @@
 ---
-displayName: NodeJS Angular Web Application
-description: Stack for developing NodeJS Angular Web Application
-tags: ["Community", "NodeJS", "Angular", "Alpine"]
+displayName: Node.js Angular Web Application
+description: Stack for developing Node.js Angular Web Application
+tags: ["Community", "Node.js", "Angular", "Alpine"]
 icon: /images/angular.svg
 links:
   v2: https://github.com/che-samples/nodejs-angular/tree/devfilev2
