--- a/devfiles/nodejs-yarn/meta.yaml
+++ b/devfiles/nodejs-yarn/meta.yaml
@@ -1,7 +1,7 @@
 ---
-displayName: NodeJS Web Application based on Yarn
-description: Stack for developing NodeJS Web Application based on Yarn 
-tags: ["Community", "NodeJS", "Alpine", "Yarn", "React"]
+displayName: Node.js Web Application based on Yarn
+description: Stack for developing Node.js Web Application based on Yarn 
+tags: ["Community", "Node.js", "Alpine", "Yarn", "React"]
 icon: /images/nodejs.svg
 links:
   v2: https://github.com/che-samples/react-web-app/tree/devfilev2
