--- a/tools/devworkspace-generator/package.json
+++ b/tools/devworkspace-generator/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/eclipse-che/che-devfile-registry#readme",
   "dependencies": {
-    "@devfile/api": "2.2.1-alpha-1667236163",
+    "@devfile/api": "latest",
     "axios": "0.21.2",
     "fs-extra": "^10.0.0",
     "inversify": "^5.0.1",
