chore: use the same version of sping-petclinik project as in happy-path
Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>

--- a/happy-path/Dockerfile
+++ b/happy-path/Dockerfile
@@ -5,6 +5,7 @@ USER root
 RUN cd / && \
     git clone https://github.com/spring-projects/spring-petclinic && \
     cd /spring-petclinic && \
+    git checkout e7c879ed3abe10e446ff103887ad665ca6acf04e && \
     mvn clean package && \
     mkdir -p /home/user/.m2/repository && \
     cp -r /root/.m2/repository/* /home/user/.m2/repository && \
