--- a/tools/devworkspace-generator/package.json
+++ b/tools/devworkspace-generator/package.json
@@ -18,7 +18,7 @@
     "prepare": "yarn run clean && yarn run build",
     "clean": "rimraf lib",
     "build": "yarn run format && yarn run compile && yarn run lint && yarn run test",
-    "compile": "tsc --project .",
+    "compile": "tsc --declaration --project .",
     "format": "if-env SKIP_FORMAT=true && echo 'skip format check' || prettier --check '{src,tests}/**/*.ts' package.json",
     "format:fix": "prettier --write '{src,tests}/**/*.ts' package.json",
     "lint": "if-env SKIP_LINT=true && echo 'skip lint check' || eslint --cache=true --no-error-on-unmatched-pattern=true '{src,tests}/(!model|**)/*.ts'",
