fix: fix dwo generator versioning
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/devworkspace-generator-release.yml
+++ b/.github/workflows/devworkspace-generator-release.yml
@@ -69,7 +69,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: |
           cd tools/devworkspace-generator
-          sed -i -r -e "s/(\"version\": )(\".*\")/\1\"${thisVERSION}\"/" package.json
+          sed -i -r -e "s/(\"version\": )(\".*\")/\1\"${{ github.event.inputs.version }}\"/" package.json
           yarn
           yarn compile
           npm publish --tag latest
