fix: fix dwo gen version
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/tools/devworkspace-generator/package.json
+++ b/tools/devworkspace-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eclipse-che/che-devworkspace-generator",
-  "version": "7.69.0",
+  "version": "7.74.1-next",
   "private": false,
   "description": "Generates DevWorkspaces by transforming existing devfiles",
   "main": "lib/entrypoint.js",
@@ -47,7 +47,6 @@
     "js-yaml": "^4.0.0",
     "jsonc-parser": "^3.0.0",
     "reflect-metadata": "^0.1.13",
-    "@eclipse-che/che-devworkspace-generator": "7.75.0-SNAPSHOT"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
