--- a/.github/workflows/devworkspace-generator-publish-next.yml
+++ b/.github/workflows/devworkspace-generator-publish-next.yml
@@ -13,6 +13,7 @@ on:
   push:
     branches: 
       - main
+      - 7.**.x
     paths:
       - 'tools/devworkspace-generator/**'
       - '.github/workflows/devworkspace-generator-publish-next.yml'
@@ -41,6 +42,14 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       run: |
+        if [[ ${GITHUB_REF##*/} == "7."**".x" ]]; then
+          echo "[INFO] using ${GITHUB_REF##*/} tag"
+          DIST_TAG="${GITHUB_REF##*/}-next"
+        else
+          echo "[INFO] using "next" tag"
+          DIST_TAG=next
+        fi
+
         cd tools/devworkspace-generator
         yarn
         yarn compile
@@ -49,4 +58,4 @@ jobs:
         NEW_VERSION="${CURRENT_VERSION}-${SHORT_SHA1}"
         echo New version is ${NEW_VERSION}
         sed -i -r -e "s/(\"version\": )(\".*\")/\1\"$NEW_VERSION\"/" package.json
-        npm publish --tag next
+        npm publish --tag $DIST_TAG
