--- a/tools/devworkspace-generator/package.json
+++ b/tools/devworkspace-generator/package.json
@@ -46,8 +46,7 @@
     "inversify": "^5.0.1",
     "js-yaml": "^4.0.0",
     "jsonc-parser": "^3.0.0",
-    "reflect-metadata": "^0.1.13",
-    "@eclipse-che/che-devworkspace-generator": "7.76.0-next"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
