--- a/deploy/openshift/che-devfile-registry.yaml
+++ b/deploy/openshift/che-devfile-registry.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2018-2021 Red Hat, Inc.
+# Copyright (c) 2018-2023 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -7,13 +7,13 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 ---
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: che-devfile-registry
 objects:
-- apiVersion: v1
-  kind: DeploymentConfig
+- apiVersion: apps/v1
+  kind: Deployment
   metadata:
     name: che-devfile-registry
     labels:
@@ -25,16 +25,17 @@ objects:
   spec:
     replicas: 1
     selector:
-      app: che
-      component: devfile-registry
+      matchLabels:
+        app: che
+        component: devfile-registry
     strategy:
-      rollingParams:
+      type: RollingUpdate
+      rollingUpdate:
         intervalSeconds: 1
         maxSurge: 25%
         maxUnavailable: 25%
         timeoutSeconds: 600
         updatePeriodSeconds: 1
-      type: Rolling
     template:
       metadata:
         labels:
@@ -107,9 +108,6 @@ objects:
       app.kubernetes.io/instance: che
       app.kubernetes.io/component: devfile-registry
   spec:
-    tls:
-      termination:
-        edge
     to:
       kind: Service
       name: che-devfile-registry
