--- a/tools/devworkspace-generator/tsconfig.json
+++ b/tools/devworkspace-generator/tsconfig.json
@@ -10,7 +10,8 @@
         "outDir": "lib",
         "types": [
             "node", "jest"
-        ]
+        ],
+        "resolveJsonModule": true,
     },
     "include": [
         "src"
