--- a/devfiles/java-lombok/meta.yaml
+++ b/devfiles/java-lombok/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: Java Lombok
-description: Java Stack with Lombok 1.18.18, OpenJDK 11 and Maven 3.6.0
+description: Java Stack with Project Lombok
 tags: ["Community", "Java", "OpenJDK", "Maven", "Debian", "Lombok"]
 icon: /images/lombok.svg
 links:
