--- a/devfiles/java-mongo/meta.yaml
+++ b/devfiles/java-mongo/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: Java with Spring Boot and MongoDB
-description: Java stack with OpenJDK 8, MongoDB and Spring Boot Guestbook demo application
+description: Java stack with MongoDB and Spring Boot Guestbook demo application
 tags: ["Community", "Java", "OpenJDK", "Maven", "Spring Boot", "MongoDB"]
 icon: /images/java.svg
 links:
