--- a/devfiles/java-web-spring/meta.yaml
+++ b/devfiles/java-web-spring/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: Java Spring Boot
-description: Java stack with OpenJDK 11 and Spring Boot Petclinic demo application
+description: Java stack with Spring Boot Petclinic demo application
 tags: ["Community", "Java", "OpenJDK", "Maven", "Spring Boot"]
 icon: /images/springboot.svg
 links:
